# fast-api-todo

./: README.md  auth.py  controllers.py  models.py  mycalendar.py  pyproject.toml
fast-api-todo/: create_table.py  db.py  db.sqlite3  run.py  urls.py
fast-api-todo/templates/: admin.html  script.js
templates/: complete.html  detail.html  index.html  layout.html  register.html
