[tool.poetry]
name = "fast-api-todo"
version = "0.1.0"
description = ""
authors = ["dakenoakari <dakeno-akari@natric.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
